# zork

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  nvim_lsp_capabilities.rs
codegen/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/dev/: nvim-lspconfig_dev.md
lsp/: Cargo.toml
lsp/src/: document.rs  features.rs  main.rs  parser.rs  protocol.rs
markup_ungrams/: Cargo.toml  zork_keg.ungram
markup_ungrams/src/: lib.rs
markup_ungrams/src/snapshots/: markup_ungrams__tests__markup_grammar_content.snap  markup_ungrams__tests__markup_grammar_content.snap.new
nix/dev/: packages.nix
nix/repo/: apps.nix  packages.nix  shellProfiles.nix  shells.nix  userShells.nix
repl/: Cargo.toml  ungrammar.ungram
repl/src/: main.rs
ungrammar_fork/: Cargo.toml  ungrammar.ungram
ungrammar_fork/src/: error.rs  lexer.rs  lib.rs  parser.rs
ungrammar_lsp/: Cargo.toml
ungrammar_lsp/src/: main.rs
ungrammar_lsp/src/snapshots/: ungrammar_lsp__alt_tracing_error_test__alt_init.snap  ungrammar_lsp__tests__extern_otlp_config-2.snap  ungrammar_lsp__tests__extern_otlp_config.snap  ungrammar_lsp__tests__prefix_serde.snap
