[workspace]
members = [
    "lsp",
    "codegen",
    "markup_ungrams",
    "ungrammar_lsp",
    "ungrammar_fork",
]
resolver = "2"

[workspace.metadata.nix]
pname = "zork"
version = "0.0.1"

[workspace.dependencies]
salsa = "^0.16"
lsp-server="^0.7.1"
lsp-types="^0.94"
rowan = "^0.15.11"

tracing = "^0.1"
log = "^0.4.17"
ungrammar = "^1.1.3"
serde_json="^1.0.82"

[workspace.dependencies.tracing-subscriber]
version = "^0.3"
default_features = false
features = [
    "env-filter",
    "fmt",
    "std",
    "tracing-log"
]
