[package]
name = "ungrammar_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = {workspace = true}
lsp-types = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
log = {workspace = true}
serde_json = {workspace = true}
ungrammar_fork = {workspace = true}
opentelemetry-otlp = {workspace=true}
xdg = {workspace=true}
